<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relative_satu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_satu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_satu"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/edit_text_dua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_satu"
            android:hint="@string/editText_satu"
            android:inputType="numberSigned" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_satu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_satu"
        android:orientation="horizontal"
        android:weightSum="2"
        tools:ignore="NotSibling">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_tambah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text_dua"
                android:text="@string/btn_tambah" />

            <Button
                android:id="@+id/btn_kurang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_tambah"
                android:text="@string/btn_kurang" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_kali"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_kali" />

            <Button
                android:id="@+id/btn_bagi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_kali"
                android:text="@string/btn_bagi" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_satu">

        <TextView
            android:id="@+id/text_view_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</RelativeLayout>